--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
-    <img src="images/silky.svg">
+    <link rel="icon" href="images/silky.svg">
+    <!-- <img src="images/silky.svg"> -->
     <!-- <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🌐</text></svg>"> -->
   </head>
 
@@ -45,7 +46,7 @@
                 </p>
               </td>
               <td style="padding:2.5%;width:40%;max-width:40%">
-                <a href="images/silky.jpeg"><img style="width:100%;max-width:100%" alt="profile photo" src="images/silky.jpeg" class="hoverZoomLink"></a>
+                <a href="images/silky_circle.png"><img style="width:100%;max-width:100%" alt="profile photo" src="images/silky_circle.png" class="hoverZoomLink"></a>
               </td>
             </tr>
           </tbody></table>
