--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
                   <span class="papertitle">LOCATE: Self-supervised Object Discovery via Flow-guided Graph-cut and Bootstrapped Self-training</span>
                 </a>
                 <br>
-                <strong><u>Silky Singh</u></strong>
-                <a href="https://shripaddeshmukh.github.io/">Shripad Deshmukh</a>,
+                <strong><u>Silky Singh</u></strong>,
+                <a href="https://scholar.google.com/citations?hl=en&user=g90em_oAAAAJ&view_op=list_works&sortby=pubdate">Shripad Deshmukh</a>,
                 <a href="https://scholar.google.com/citations?hl=en&user=N6J7J4IAAAAJ&view_op=list_works&sortby=pubdate">Mausoom Sarkar</a>,
                 <a href="https://scholar.google.com/citations?view_op=list_works&hl=en&hl=en&user=n8iUBg8AAAAJ&sortby=pubdate">Balaji Krishnamurthy</a>
                 <br>
@@ -107,8 +107,8 @@
                   <span class="papertitle">FODVid: Flow-guided Object Discovery in Videos</span>
                 </a>
                 <br>
-                <strong><u>Silky Singh</u></strong>
-                <a href="https://shripaddeshmukh.github.io/">Shripad Deshmukh</a>,
+                <strong><u>Silky Singh</u></strong>,
+                <a href="https://scholar.google.com/citations?hl=en&user=g90em_oAAAAJ&view_op=list_works&sortby=pubdate">Shripad Deshmukh</a>,
                 <a href="https://scholar.google.com/citations?hl=en&user=N6J7J4IAAAAJ&view_op=list_works&sortby=pubdate">Mausoom Sarkar</a>,
                 <a href="https://scholar.google.com/citations?hl=en&user=PWOTgvQAAAAJ&view_op=list_works&sortby=pubdate">Rishabh Jain</a>,
                 <a href="https://scholar.google.com/citations?hl=en&user=cOvjHL0AAAAJ&view_op=list_works&sortby=pubdate">Mayur Hemani</a>,
@@ -137,9 +137,9 @@
           </tr>
         </tbody></table>
         <ul>
-          <item>Generating image object segmentations utilizing graph-cut partitioning in self-supervised object discovery (<em>Filed: P12004-US</em>)</item>
-          <item>Video Object Segmentation using estimated motion information and image features (<em>Filed: P12170-US</em>)</item>
-          <item>Personalized form error correction propagation (<em>Filed: P12351-US</em>)</item>
+          <item>Generating image object segmentations utilizing graph-cut partitioning in self-supervised object discovery (<em>Filed: P12004-US</em>)</item><br/>
+          <item>Video Object Segmentation using estimated motion information and image features (<em>Filed: P12170-US</em>)</item><br/>
+          <item>Personalized form error correction propagation (<em>Filed: P12351-US</em>)</item><br/>
         </ul>
 
 
@@ -153,7 +153,7 @@
               <td style="padding:0px">
                 <br>
                 <p style="text-align:right;font-size:small;">
-                  web template from <a href="https://github.com/jonbarron/jonbarron_website">Jon Barron</a>!
+                  thanks <a href="https://github.com/jonbarron/jonbarron_website">Jon Barron</a>! for the template
                 </p>
               </td>
             </tr>
