update main page

--- a/index.html
+++ b/index.html
@@ -25,14 +25,20 @@
                 Silky Singh
                 </p>
                 <p>I am a Machine Learning Research Associate at Media and Data Science Research (MDSR) Lab, Adobe. 
-                  I am broadly interested in computer vision, multi-modal learning. Specifically, I like image editing,
-                  self-supervised learning, and in general, the idea of making autonomous agents that can perceive the 
-                  world as intelligently as humans. 
+                  I am broadly interested in computer vision, multi-modal learning. I have explored
+                  image editing, self-supervised learning, image segmentation and style transfer. I would love to 
+                  dig into embodied AI next!
                 </p>
                 <p>
-                  At Adobe I've worked on self-supervised object segmentation in images and videos. More recently, I 
-                  have also explored text-conditioned style transfer in images. Currently, I am involved in document 
-                  analysis where we focus on form document understanding.    
+                  In 2022, I graduated from IIT Delhi with a Bachelor's in Mathematics and Computing. My 
+                  thesis project on "Deep Neural Network approximation for image denoising" was advised by
+                   <a href="https://0-scholar-google-com.brum.beds.ac.uk/citations?user=GmeH5ugAAAAJ&hl=en">Prof. Sivananthan Sampath</a>.
+                  During the summer of 2021, I spent a wonderful time at <a href="https://research.adobe.com/">
+                    Adobe Research</a> working with <a href="https://kuldeepkulkarni.github.io/">Dr. Kuldeep Kulkarni</a>
+                  on context-aware object insertion in images. Previously, I had an amazing time at 
+                  <a href="https://www.mpi-sws.org/research-areas/programming-languages-and-verification/">MPI-SWS</a> working on
+                  program synthesis under the supervision of <a href="https://malyzajko.github.io/">Prof. Eva Darulova</a>.
+
                 </p>
                 <p style="text-align:center">
                   <a href="mailto:silky1708@gmail.com">Email</a> &nbsp;/&nbsp;
@@ -46,7 +52,7 @@
                 </p>
               </td>
               <td style="padding:2.5%;width:40%;max-width:40%">
-                <a href="images/silky_circle_web.png"><img style="width:100%;max-width:100%" alt="profile photo" src="images/silky_circle_web.png" class="hoverZoomLink"></a>
+                <a href="images/silky_circle.png"><img style="width:100%;max-width:100%" alt="profile photo" src="images/silky_circle.png" class="hoverZoomLink"></a>
               </td>
             </tr>
           </tbody></table>
@@ -136,14 +142,35 @@
             </td>
           </tr>
         </tbody></table>
-        <ul>
-          <item>Generating image object segmentations utilizing graph-cut partitioning in self-supervised object discovery (<em>Filed: P12004-US</em>)</item><br/>
-          <item>Video Object Segmentation using estimated motion information and image features (<em>Filed: P12170-US</em>)</item><br/>
-          <item>Personalized form error correction propagation (<em>Filed: P12351-US</em>)</item><br/>
-        </ul>
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+          <tr>
+            <ul>
+              <li>Generating image object segmentations utilizing graph-cut partitioning in self-supervised object discovery (<em>Filed: P12004-US</em>)</li><br/>
+              <li>Video Object Segmentation using estimated motion information and image features (<em>Filed: P12170-US</em>)</li><br/>
+              <li>Personalized form error correction propagation (<em>Filed: P12351-US</em>)</li><br/>
+            </ul>
+          </tr>
+      </tbody></table>
+        
 
 
-
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+          <tr>
+          <td style="padding:20px;width:100%;vertical-align:middle">
+            <h2>Teaching & Mentorship</h2>
+          </td>
+        </tr>
+      </tbody></table>
+      <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+          <tr>
+            <ul>
+              <li>[Spring 2022] Teaching Assistant, Linear Algebra and Applications (<em>IIT Delhi</em>) </li>
+              <li>[Fall 2021] Teaching Assistant, Introduction to Computer Science (<em>IIT Delhi</em>)</li>
+              <li>[Fall 2019] Institute Academic Mentor, Board for Student Welfare (<em>IIT Delhi</em>)</li>
+            </ul>
+          </tr>
+      </tbody></table>
+      
 
 
 
@@ -153,7 +180,8 @@
               <td style="padding:0px">
                 <br>
                 <p style="text-align:right;font-size:small;">
-                  thanks <a href="https://github.com/jonbarron/jonbarron_website">Jon Barron</a>! for the template
+                  thanks <a href="https://github.com/jonbarron/jonbarron_website">Jon Barron</a> for the template!<br/>
+                  Last Updated: Oct 2023
                 </p>
               </td>
             </tr>
