--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                   <!-- <a href="https://twitter.com/jon_barron">Twitter</a> &nbsp;/&nbsp; -->
                   <a href="https://github.com/silky1708">Github</a> &nbsp;/&nbsp;
                   <a href="https://www.linkedin.com/in/silky1708/">LinkedIn</a> &nbsp;/&nbsp;
-                  <a href="misc/index.html">Misc</a>
+                  <a href="misc.html">Misc</a>
                 </p>
               </td>
               <td style="padding:2.5%;width:30%;max-width:30%">
