--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
                 Silky Singh
                 </p>
                 <p>I am a Machine Learning Research Associate at Media and Data Science Research (MDSR) Lab, Adobe. 
-                  I am broadly interested in computer vision, multi-modal learning. During my time here, I have explored
+                  I am broadly interested in computer vision and machine learning. During my time here, I have explored
                   image editing, self-supervised learning, image segmentation and text-conditioned style transfer.
                 </p>
                 <p>
                   In 2022, I graduated from <a href="https://home.iitd.ac.in/">IIT Delhi</a> with a Bachelor's in Mathematics and Computing. My 
                   thesis project on "Deep Neural Network approximation for image denoising" was advised by
-                   <a href="https://0-scholar-google-com.brum.beds.ac.uk/citations?user=GmeH5ugAAAAJ&hl=en">Prof. Sivananthan Sampath</a>.
+                   <a href="https://web.iitd.ac.in/~siva/">Prof. Sivananthan Sampath</a>.
                   During the summer of 2021, I spent a wonderful time at <a href="https://research.adobe.com/">
                     Adobe Research</a> working with <a href="https://kuldeepkulkarni.github.io/">Dr. Kuldeep Kulkarni</a>
                   on context-aware object insertion in images. Previously, I also had an amazing time at 
@@ -113,13 +113,13 @@
                   <a href="https://scholar.google.com/citations?view_op=list_works&hl=en&hl=en&user=n8iUBg8AAAAJ&sortby=pubdate">Balaji Krishnamurthy</a>
                 </em>
                 <br>
-                <em>British Machine Vision Conference (<a href="https://bmvc2023.org/">BMVC</a>)</em>, 2023 (Poster)
+                <em>British Machine Vision Conference (<a href="https://bmvc2023.org/">BMVC</a>)</em>, 2023
                 <br>
-                <a href="">project page</a> /
+                <a href="https://silky1708.github.io/LOCATE/">project page</a> /
                 <a href="https://arxiv.org/abs/2308.11239">arXiv</a> /
                 <a href="https://github.com/silky1708/LOCATE">code</a>
                 <p></p>
-                <p>Self-supervised framework that can perform object segmentation in both videos and images.</p>
+                <p>Self-supervised framework for object segmentation in both videos and images.</p>
               </td>
             </tr>
 
@@ -144,9 +144,8 @@
                   <a href="https://scholar.google.com/citations?view_op=list_works&hl=en&hl=en&user=n8iUBg8AAAAJ&sortby=pubdate">Balaji Krishnamurthy</a>
                 </em>
                 <br>
-                <em>CVPR workshop on Learning with Limited Labelled Data (<a href="https://sites.google.com/view/l3d-ivu-2023">L3D-IVU</a>)</em>, 2023 (Poster)
+                <em>CVPR workshop on Learning with Limited Labelled Data (<a href="https://sites.google.com/view/l3d-ivu-2023">L3D-IVU</a>)</em>, 2023
                 <br>
-                <a href="">project page</a> /
                 <a href="https://arxiv.org/abs/2307.04392">arXiv</a> /
                 <a href="https://github.com/IssamLaradji/l3divu/blob/main/l3divu_2023/accepted_no_archive/46.pdf">paper</a>
                 <!-- <a href="https://github.com/silky1708/LOCATE">code</a> -->
@@ -169,9 +168,9 @@
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <tr>
             <ul>
-              <li>Generating image object segmentations utilizing graph-cut partitioning in self-supervised object discovery (<em>Filed: P12004-US</em>)</li>
-              <li>Video Object Segmentation using estimated motion information and image features (<em>Filed: P12170-US</em>)</li>
-              <li>Personalized form error correction propagation (<em>Filed: P12351-US</em>)</li>
+              <li>Generating image object segmentations utilizing graph-cut partitioning in self-supervised object discovery (<em>Filed at USPTO</em>)</li>
+              <li>Video Object Segmentation using estimated motion information and image features (<em>Filed at USPTO</em>)</li>
+              <li>Personalized form error correction propagation (<em>Filed at USPTO</em>)</li>
             </ul>
           </tr>
       </tbody></table>
@@ -204,8 +203,8 @@
               <td style="padding:0px">
                 <br>
                 <p style="text-align:right;font-size:small;">
-                  Last Updated: Oct 2023<br/>
-                  thanks <a href="https://github.com/jonbarron/jonbarron_website">Jon Barron</a> for the template!
+                  Last Updated: Nov 2023<br/>
+                  thanks Jon Barron for the <a href="https://github.com/jonbarron/jonbarron_website">template</a>!
                   
                 </p>
               </td>
