--- a/misc.html
+++ b/misc.html
@@ -46,9 +46,15 @@
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
             <tr>
             <td style="padding:20px;width:100%;vertical-align:middle">
-            <h2>My Library <span class="material-symbols-outlined">
+            <h2>My Library <i class="fa-solid fa-books"></i>
+            <span class="material-symbols-outlined">
                 menu_book
-            </span></h2>
+            </span></h2><br/>
+            <i class="fa-solid fa-bookmark" style="color:purple"></i>Fiction &nbsp;&nbsp;
+            <i class="fa-solid fa-bookmark" style="color:orangered"></i>Non-fiction &nbsp;&nbsp;
+            <i class="fa-solid fa-bookmark" style="color:yellow"></i>Behavioral economics &nbsp;&nbsp;
+            <i class="fa-solid fa-bookmark" style="color:blueviolet"></i>Psychology &nbsp;&nbsp;
+
             </td>
         </tr>
         </tbody></table>
@@ -77,9 +83,15 @@
                 <li>Men without Women <em>by Haruki Murakami</em></li>
                 <li>The Great Gatsby <em>by F. Scott Fitzgerald</em></li>
                 <li>Ikigai <em>by Yukari Mitsuhashi</em></li>
-                <li>Crime and Punishment <em>by Fyodor Dostoyevsky</em></li>
+                <li>Crime and Punishment <em>by Fyodor Dostoyevsky</em> (reading...)</li>
                 <li>the picture of Dorian Gray <em>by Oscar Wilde</em></li>
                 <li>Outliers <em>by Malcom Gladwell</em></li>
+                <li>The Compound Effect <em>by Darren Hardy</em></li>
+                <li>Seven brief lessons on Physics <em>by Carlo Rovelli</em></li>
+                <li>How to Fail at Almost Everything and Still Win Big <em>by Scott Adams</em></li>
+                <li>Testing Kate <em>by Whitney Gaskell</em></li>
+                <li>Everything I never told you <em>by Celeste Ng</em></li>
+                <li>The Almanack of Naval Ravikant <em>by Eric Jorgenson</em></li>
               </ul>
             </tr>
         </tbody></table>
