include font-awesome icons

--- a/misc.html
+++ b/misc.html
@@ -50,10 +50,10 @@
             <span class="material-symbols-outlined">
                 menu_book
             </span></h2><br/>
-            <i class="fa-solid fa-bookmark" style="color:purple"></i>Fiction &nbsp;&nbsp;
-            <i class="fa-solid fa-bookmark" style="color:orangered"></i>Non-fiction &nbsp;&nbsp;
-            <i class="fa-solid fa-bookmark" style="color:yellow"></i>Behavioral economics &nbsp;&nbsp;
-            <i class="fa-solid fa-bookmark" style="color:blueviolet"></i>Psychology &nbsp;&nbsp;
+            <span style="color: purple;"><i class="fa-solid fa-bookmark"></i></span> Fiction &nbsp;&nbsp;
+            <span style="color:orangered"><i class="fa-solid fa-bookmark"></i></span> Non-fiction &nbsp;&nbsp;
+            <span style="color:yellow"><i class="fa-solid fa-bookmark"></i></span> Behavioral economics &nbsp;&nbsp;
+            <span style="color:blueviolet"><i class="fa-solid fa-bookmark"></i></span> Psychology &nbsp;&nbsp;
 
             </td>
         </tr>
