include font-awesome icons

--- a/misc.html
+++ b/misc.html
@@ -46,14 +46,14 @@
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
             <tr>
             <td style="padding:20px;width:100%;vertical-align:middle">
-            <h2>My Library <i class="fa-solid fa-books"></i>
+            <h2>My Library <span class="fa-solid fa-books"></span>
             <span class="material-symbols-outlined">
                 menu_book
             </span></h2><br/>
-            <span style="color: purple;"><i class="fa-solid fa-bookmark"></i></span> Fiction &nbsp;&nbsp;
-            <span style="color:orangered"><i class="fa-solid fa-bookmark"></i></span> Non-fiction &nbsp;&nbsp;
-            <span style="color:yellow"><i class="fa-solid fa-bookmark"></i></span> Behavioral economics &nbsp;&nbsp;
-            <span style="color:blueviolet"><i class="fa-solid fa-bookmark"></i></span> Psychology &nbsp;&nbsp;
+            <span class="fa-solid fa-bookmark" style="color: purple;"></span> Fiction &nbsp;&nbsp;
+            <span class="fa-solid fa-bookmark" style="color:orangered"></span> Non-fiction &nbsp;&nbsp;
+            <span class="fa-solid fa-bookmark" style="color:yellow"></span> Behavioral economics &nbsp;&nbsp;
+            <span class="fa-solid fa-bookmark" style="color:blueviolet"></span> Psychology &nbsp;&nbsp;
 
             </td>
         </tr>
@@ -83,7 +83,7 @@
                 <li>Men without Women <em>by Haruki Murakami</em></li>
                 <li>The Great Gatsby <em>by F. Scott Fitzgerald</em></li>
                 <li>Ikigai <em>by Yukari Mitsuhashi</em></li>
-                <li>Crime and Punishment <em>by Fyodor Dostoyevsky</em> (reading...)</li>
+                <li>Crime and Punishment <em>by Fyodor Dostoyevsky</em></li>
                 <li>the picture of Dorian Gray <em>by Oscar Wilde</em></li>
                 <li>Outliers <em>by Malcom Gladwell</em></li>
                 <li>The Compound Effect <em>by Darren Hardy</em></li>
