setup font awesome

--- a/misc.html
+++ b/misc.html
@@ -10,6 +10,7 @@
 
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+    <script src="https://kit.fontawesome.com/e86757dabd.js" crossorigin="anonymous"></script>
     <!-- <link rel="icon" type="image/svg" href="images/silky.svg" sizes="48x48"> -->
     <!-- <img src="images/silky.svg"> -->
     <!-- <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🌐</text></svg>"> -->
