--- a/misc.html
+++ b/misc.html
@@ -51,7 +51,7 @@
             <span class="material-symbols-outlined">
                 menu_book
             </span></h2><br/>
-            <span class="fa-solid fa-bookmark" style="color: purple;"></span> Fiction &nbsp;&nbsp;
+            <img src="images/bookmark-solid.svg"><span class="fa-solid fa-bookmark" style="color: purple;"></span> Fiction &nbsp;&nbsp;
             <span class="fa-solid fa-bookmark" style="color:orangered"></span> Non-fiction &nbsp;&nbsp;
             <span class="fa-solid fa-bookmark" style="color:yellow"></span> Behavioral economics &nbsp;&nbsp;
             <span class="fa-solid fa-bookmark" style="color:blueviolet"></span> Psychology &nbsp;&nbsp;
