--- a/misc.html
+++ b/misc.html
@@ -47,14 +47,15 @@
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
             <tr>
             <td style="padding:20px;width:100%;vertical-align:middle">
-            <h2>My Library <span class="fa-solid fa-books"></span>
-            <span class="material-symbols-outlined">
+            <h2>My Library &nbsp; <img src="images/book-open-solid.svg">
+            <!-- <span class="material-symbols-outlined">
                 menu_book
-            </span></h2><br/>
-            <img src="images/bookmark-solid.svg"><span class="fa-solid fa-bookmark" style="color: purple;"></span> Fiction &nbsp;&nbsp;
-            <span class="fa-solid fa-bookmark" style="color:orangered"></span> Non-fiction &nbsp;&nbsp;
-            <span class="fa-solid fa-bookmark" style="color:yellow"></span> Behavioral economics &nbsp;&nbsp;
-            <span class="fa-solid fa-bookmark" style="color:blueviolet"></span> Psychology &nbsp;&nbsp;
+            </span> -->
+            </h2><br/>
+            <span style="color: purple;"><img src="images/bookmark-solid.svg"></span> Fiction &nbsp;&nbsp;
+            <span style="color:orangered"><img src="images/bookmark-solid.svg"></span> Non-fiction &nbsp;&nbsp;
+            <span style="color:yellow"><img src="images/bookmark-solid.svg"></span> Behavioral economics &nbsp;&nbsp;
+            <span style="color:blueviolet"><img src="images/bookmark-solid.svg"></span> Psychology &nbsp;&nbsp;
 
             </td>
         </tr>
