--- a/misc.html
+++ b/misc.html
@@ -47,15 +47,16 @@
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
             <tr>
             <td style="padding:20px;width:100%;vertical-align:middle">
-            <h2>My Library &nbsp; <img src="images/book-open-solid.svg">
+            <h2>My Library 
+            <!-- &nbsp; <img src="images/book-open-solid-xl.svg"> -->
             <!-- <span class="material-symbols-outlined">
                 menu_book
             </span> -->
             </h2><br/>
-            <span style="color: purple;"><img src="images/bookmark-solid.svg"></span> Fiction &nbsp;&nbsp;
-            <span style="color:orangered"><img src="images/bookmark-solid.svg"></span> Non-fiction &nbsp;&nbsp;
-            <span style="color:yellow"><img src="images/bookmark-solid.svg"></span> Behavioral economics &nbsp;&nbsp;
-            <span style="color:blueviolet"><img src="images/bookmark-solid.svg"></span> Psychology &nbsp;&nbsp;
+            <img src="images/bookmark-solid-sm-red.svg"> Fiction &nbsp;&nbsp;
+            <img src="images/bookmark-solid-sm-orange.svg"> Non-fiction &nbsp;&nbsp;
+            <img src="images/bookmark-solid-sm-green.svg"> Behavioral economics &nbsp;&nbsp;
+            <img src="images/bookmark-solid-sm-violet.svg"> Psychology &nbsp;&nbsp;
 
             </td>
         </tr>
