--- a/misc.html
+++ b/misc.html
@@ -64,37 +64,37 @@
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
             <tr>
               <ul>
-                <li>The Inimitable Jeeves <em>by P. G. Wodehouse</em></li>
-                <li>Murder on the Orient Express <em>by Agatha Christie</em></li>
-                <li>And Then There Were None <em>by Agatha Christie</em></li>
-                <li>Origin <em>by Dan Brown</em></li>
-                <li>The Girl on the Train <em>by Paula Hawkins</em></li>
-                <li>Surely You're Joking, Mr. Feynman <em>by Richard P. Feynman</em></li>
-                <li>The Psychology of Money <em>by Morgan Housel</em></li>
-                <li>tuesdays with Morrie <em>by Mitch Albom</em></li>
-                <li>The Silent Patient <em>by Alex Michaelides</em></li>
-                <li>Love etc <em>by Julian Barnes</em></li>
-                <li>Hullabaloo in the Guava Orchard <em>by Kiran Desai</em></li>
-                <li>38 Bahadurabad <em>by Zeeba Sadiq</em></li>
-                <li>Moonwalking with Einstein <em>by Joshua Foer</em></li>
-                <li>The Mystery of the Blue Train <em>by Agatha Christie</em></li>
-                <li>Alibaba <em>by Duncan Clark</em></li>
-                <li>Range <em>by David Epstein</em></li>
-                <li>Predictably Irrational <em>by Dan Ariely</em></li>
-                <li>Norwegian Wood <em>by Haruki Murakami</em></li>
-                <li>So Good They Can't Ignore You <em>by Cal Newport</em></li>
-                <li>Men without Women <em>by Haruki Murakami</em></li>
-                <li>The Great Gatsby <em>by F. Scott Fitzgerald</em></li>
-                <li>Ikigai <em>by Yukari Mitsuhashi</em></li>
-                <li>Crime and Punishment <em>by Fyodor Dostoyevsky</em></li>
-                <li>the picture of Dorian Gray <em>by Oscar Wilde</em></li>
-                <li>Outliers <em>by Malcom Gladwell</em></li>
-                <li>The Compound Effect <em>by Darren Hardy</em></li>
-                <li>Seven brief lessons on Physics <em>by Carlo Rovelli</em></li>
-                <li>How to Fail at Almost Everything and Still Win Big <em>by Scott Adams</em></li>
-                <li>Testing Kate <em>by Whitney Gaskell</em></li>
-                <li>Everything I never told you <em>by Celeste Ng</em></li>
-                <li>The Almanack of Naval Ravikant <em>by Eric Jorgenson</em></li>
+                <li>The Inimitable Jeeves <em>by P. G. Wodehouse</em>  &nbsp; <img src="images/bookmark-solid-sm-red.svg"></li>
+                <li>Murder on the Orient Express <em>by Agatha Christie</em>  &nbsp; <img src="images/bookmark-solid-sm-red.svg"></li> 
+                <li>And Then There Were None <em>by Agatha Christie</em>  &nbsp; <img src="images/bookmark-solid-sm-red.svg"></li>
+                <li>Origin <em>by Dan Brown</em>  &nbsp; <img src="images/bookmark-solid-sm-red.svg"></li>
+                <li>The Girl on the Train <em>by Paula Hawkins</em>  &nbsp; <img src="images/bookmark-solid-sm-red.svg"></li>
+                <li>Surely You're Joking, Mr. Feynman <em>by Richard P. Feynman</em>&nbsp; <img src="images/bookmark-solid-sm-orange.svg"></li>
+                <li>The Psychology of Money <em>by Morgan Housel</em> &nbsp; <img src="images/bookmark-solid-sm-orange.svg"></li>
+                <li>tuesdays with Morrie <em>by Mitch Albom</em> &nbsp; <img src="images/bookmark-solid-sm-orange.svg"></li>
+                <li>The Silent Patient <em>by Alex Michaelides</em>  &nbsp; <img src="images/bookmark-solid-sm-red.svg"></li>
+                <li>Love etc <em>by Julian Barnes</em>  &nbsp; <img src="images/bookmark-solid-sm-red.svg"></li>
+                <li>Hullabaloo in the Guava Orchard <em>by Kiran Desai</em>  &nbsp; <img src="images/bookmark-solid-sm-red.svg"></li>
+                <li>38 Bahadurabad <em>by Zeeba Sadiq</em>  &nbsp; <img src="images/bookmark-solid-sm-red.svg"></li>
+                <li>Moonwalking with Einstein <em>by Joshua Foer</em> &nbsp; <img src="images/bookmark-solid-sm-orange.svg"></li>
+                <li>The Mystery of the Blue Train <em>by Agatha Christie</em>  &nbsp; <img src="images/bookmark-solid-sm-red.svg"></li>
+                <li>Alibaba <em>by Duncan Clark</em> &nbsp; <img src="images/bookmark-solid-sm-orange.svg"></li>
+                <li>Range <em>by David Epstein</em> &nbsp; <img src="images/bookmark-solid-sm-orange.svg"></li>
+                <li>Predictably Irrational <em>by Dan Ariely</em> &nbsp; <img src="images/bookmark-solid-sm-green.svg"></li>
+                <li>Norwegian Wood <em>by Haruki Murakami</em>  &nbsp; <img src="images/bookmark-solid-sm-red.svg"></li>
+                <li>So Good They Can't Ignore You <em>by Cal Newport</em> &nbsp; <img src="images/bookmark-solid-sm-orange.svg"></li>
+                <li>Men without Women <em>by Haruki Murakami</em>  &nbsp; <img src="images/bookmark-solid-sm-red.svg"></li>
+                <li>The Great Gatsby <em>by F. Scott Fitzgerald</em>  &nbsp; <img src="images/bookmark-solid-sm-red.svg"></li>
+                <li>Ikigai <em>by Yukari Mitsuhashi</em> &nbsp; <img src="images/bookmark-solid-sm-orange.svg"></li>
+                <li>Crime and Punishment <em>by Fyodor Dostoyevsky</em> &nbsp; <img src="images/bookmark-solid-sm-violet.svg"></li>
+                <li>the picture of Dorian Gray <em>by Oscar Wilde</em>  &nbsp; <img src="images/bookmark-solid-sm-red.svg"></li>
+                <li>Outliers <em>by Malcom Gladwell</em> &nbsp; <img src="images/bookmark-solid-sm-orange.svg"></li>
+                <li>The Compound Effect <em>by Darren Hardy</em> &nbsp; <img src="images/bookmark-solid-sm-orange.svg"></li>
+                <li>Seven brief lessons on Physics <em>by Carlo Rovelli</em> &nbsp; <img src="images/bookmark-solid-sm-orange.svg"></li>
+                <li>How to Fail at Almost Everything and Still Win Big <em>by Scott Adams</em> &nbsp; <img src="images/bookmark-solid-sm-orange.svg"></li>
+                <li>Testing Kate <em>by Whitney Gaskell</em>  &nbsp; <img src="images/bookmark-solid-sm-red.svg"></li>
+                <li>Everything I never told you <em>by Celeste Ng</em>  &nbsp; <img src="images/bookmark-solid-sm-red.svg"></li>
+                <li>The Almanack of Naval Ravikant <em>by Eric Jorgenson</em> &nbsp; <img src="images/bookmark-solid-sm-orange.svg"></li>
               </ul>
             </tr>
         </tbody></table>
