--- a/misc.html
+++ b/misc.html
@@ -63,14 +63,14 @@
         </tbody></table>
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
             <tr>
-              <ul>
-                <li>The Inimitable Jeeves <em>by P. G. Wodehouse</em>  &nbsp; <img src="images/bookmark-solid-sm-red.svg"></li>
-                <li>Murder on the Orient Express <em>by Agatha Christie</em>  &nbsp; <img src="images/bookmark-solid-sm-red.svg"></li> 
-                <li>And Then There Were None <em>by Agatha Christie</em>  &nbsp; <img src="images/bookmark-solid-sm-red.svg"></li>
-                <li>Origin <em>by Dan Brown</em>  &nbsp; <img src="images/bookmark-solid-sm-red.svg"></li>
-                <li>The Girl on the Train <em>by Paula Hawkins</em>  &nbsp; <img src="images/bookmark-solid-sm-red.svg"></li>
-                <li>Surely You're Joking, Mr. Feynman <em>by Richard P. Feynman</em>&nbsp; <img src="images/bookmark-solid-sm-orange.svg"></li>
-                <li>The Psychology of Money <em>by Morgan Housel</em> &nbsp; <img src="images/bookmark-solid-sm-orange.svg"></li>
+              <!-- <ul>
+                <li><img src="images/bookmark-solid-sm-red.svg">&nbsp;The Inimitable Jeeves <em>by P. G. Wodehouse</em></li>
+                <li><img src="images/bookmark-solid-sm-red.svg">&nbsp;Murder on the Orient Express <em>by Agatha Christie</em></li> 
+                <li><img src="images/bookmark-solid-sm-red.svg">  &nbsp; And Then There Were None <em>by Agatha Christie</em></li>
+                <li><img src="images/bookmark-solid-sm-red.svg"> &nbsp; Origin <em>by Dan Brown</em> </li>
+                <li><img src="images/bookmark-solid-sm-red.svg"> &nbsp; The Girl on the Train <em>by Paula Hawkins</em> </li>
+                <li> <img src="images/bookmark-solid-sm-orange.svg">&nbsp;Surely You're Joking, Mr. Feynman <em>by Richard P. Feynman</em></li>
+                <li><img src="images/bookmark-solid-sm-orange.svg"> &nbsp; The Psychology of Money <em>by Morgan Housel</em></li>
                 <li>tuesdays with Morrie <em>by Mitch Albom</em> &nbsp; <img src="images/bookmark-solid-sm-orange.svg"></li>
                 <li>The Silent Patient <em>by Alex Michaelides</em>  &nbsp; <img src="images/bookmark-solid-sm-red.svg"></li>
                 <li>Love etc <em>by Julian Barnes</em>  &nbsp; <img src="images/bookmark-solid-sm-red.svg"></li>
@@ -95,7 +95,42 @@
                 <li>Testing Kate <em>by Whitney Gaskell</em>  &nbsp; <img src="images/bookmark-solid-sm-red.svg"></li>
                 <li>Everything I never told you <em>by Celeste Ng</em>  &nbsp; <img src="images/bookmark-solid-sm-red.svg"></li>
                 <li>The Almanack of Naval Ravikant <em>by Eric Jorgenson</em> &nbsp; <img src="images/bookmark-solid-sm-orange.svg"></li>
+              </ul> -->
+              <ul>
+                <li><img src="images/bookmark-solid-sm-red.svg">&nbsp;The Inimitable Jeeves <em>by P. G. Wodehouse</em></li>
+                <li><img src="images/bookmark-solid-sm-red.svg">&nbsp;Murder on the Orient Express <em>by Agatha Christie</em></li>
+                <li><img src="images/bookmark-solid-sm-red.svg">&nbsp;And Then There Were None <em>by Agatha Christie</em></li>
+                <li><img src="images/bookmark-solid-sm-red.svg">&nbsp;Origin <em>by Dan Brown</em></li>
+                <li><img src="images/bookmark-solid-sm-red.svg">&nbsp;The Girl on the Train <em>by Paula Hawkins</em></li>
+                <li><img src="images/bookmark-solid-sm-orange.svg">&nbsp;Surely You're Joking, Mr. Feynman <em>by Richard P. Feynman</em></li>
+                <li><img src="images/bookmark-solid-sm-orange.svg">&nbsp;The Psychology of Money <em>by Morgan Housel</em></li>
+                <li><img src="images/bookmark-solid-sm-orange.svg">&nbsp;tuesdays with Morrie <em>by Mitch Albom</em></li>
+                <li><img src="images/bookmark-solid-sm-red.svg">&nbsp;The Silent Patient <em>by Alex Michaelides</em></li>
+                <li><img src="images/bookmark-solid-sm-red.svg">&nbsp;Love etc <em>by Julian Barnes</em></li>
+                <li><img src="images/bookmark-solid-sm-red.svg">&nbsp;Hullabaloo in the Guava Orchard <em>by Kiran Desai</em></li>
+                <li><img src="images/bookmark-solid-sm-red.svg">&nbsp;38 Bahadurabad <em>by Zeeba Sadiq</em></li>
+                <li><img src="images/bookmark-solid-sm-orange.svg">&nbsp;Moonwalking with Einstein <em>by Joshua Foer</em></li>
+                <li><img src="images/bookmark-solid-sm-red.svg">&nbsp;The Mystery of the Blue Train <em>by Agatha Christie</em></li>
+                <li><img src="images/bookmark-solid-sm-orange.svg">&nbsp;Alibaba <em>by Duncan Clark</em></li>
+                <li><img src="images/bookmark-solid-sm-orange.svg">&nbsp;Range <em>by David Epstein</em></li>
+                <li><img src="images/bookmark-solid-sm-green.svg">&nbsp;Predictably Irrational <em>by Dan Ariely</em></li>
+                <li><img src="images/bookmark-solid-sm-red.svg">&nbsp;Norwegian Wood <em>by Haruki Murakami</em></li>
+                <li><img src="images/bookmark-solid-sm-orange.svg">&nbsp;So Good They Can't Ignore You <em>by Cal Newport</em></li>
+                <li><img src="images/bookmark-solid-sm-red.svg">&nbsp;Men without Women <em>by Haruki Murakami</em></li>
+                <li><img src="images/bookmark-solid-sm-red.svg">&nbsp;The Great Gatsby <em>by F. Scott Fitzgerald</em></li>
+                <li><img src="images/bookmark-solid-sm-orange.svg">&nbsp;Ikigai <em>by Yukari Mitsuhashi</em></li>
+                <li><img src="images/bookmark-solid-sm-violet.svg">&nbsp;Crime and Punishment <em>by Fyodor Dostoyevsky</em></li>
+                <li><img src="images/bookmark-solid-sm-red.svg">&nbsp;the picture of Dorian Gray <em>by Oscar Wilde</em></li>
+                <li><img src="images/bookmark-solid-sm-orange.svg">&nbsp;Outliers <em>by Malcom Gladwell</em></li>
+                <li><img src="images/bookmark-solid-sm-orange.svg">&nbsp;The Compound Effect <em>by Darren Hardy</em></li>
+                <li><img src="images/bookmark-solid-sm-orange.svg">&nbsp;Seven brief lessons on Physics <em>by Carlo Rovelli</em></li>
+                <li><img src="images/bookmark-solid-sm-orange.svg">&nbsp;How to Fail at Almost Everything and Still Win Big <em>by Scott Adams</em></li>
+                <li><img src="images/bookmark-solid-sm-red.svg">&nbsp;Testing Kate <em>by Whitney Gaskell</em></li>
+                <li><img src="images/bookmark-solid-sm-red.svg">&nbsp;Everything I never told you <em>by Celeste Ng</em></li>
+                <li><img src="images/bookmark-solid-sm-orange.svg">&nbsp;The Almanack of Naval Ravikant <em>by Eric Jorgenson</em></li>
               </ul>
+            
+            
             </tr>
         </tbody></table>
 
