removing dots from ul

--- a/misc.html
+++ b/misc.html
@@ -38,6 +38,10 @@
         background-color: transparent;
         text-decoration: underline;
       }
+
+      ul li{
+        list-style-type: none;
+      }
       </style>
   </head>
 
